Cleaned up writers tests Added ExampleFilesTest testing small.in file vs small.csv and small.xml